sets up mongo and mariadb seeds and files, data gen

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yelp-Review-Component",
+  "name": "yelp-reviews",
   "version": "1.0.0",
   "description": "This is a component that renders reviews from a postgre-sql database with mock reviews in. Designed to be a clone of Yelp's reviews microservice.",
   "main": "index.js",
@@ -28,10 +28,15 @@
     "body-parser": "^1.18.3",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "image-loader": "0.0.1",
-    "image-webpack-loader": "^4.3.0",
+    "image-webpack-loader": "^4.3.1",
+    "mariasql": "^0.2.6",
+    "mongod": "^2.0.0",
+    "mongodb": "^3.0.10",
+    "mysql": "^2.15.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
