--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongod": "^2.0.0",
     "mongodb": "^3.0.10",
     "mysql": "^2.15.0",
+    "newrelic": "^4.2.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
